# statsig-forward-proxy

./: .gitmodules  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.rs  build_linux.zsh  entrypoint.sh  nginx-http-https.conf.template  nginx-http-only.conf.template  nginx-https-only.conf.template  nginx.conf  nginx.conf.template  run_locally.zsh
.cargo/: config.toml
chart/: Chart.yaml  README.MD  README.md  values.yaml
chart/templates/: deployment.yaml  ingress.yaml  pdb.yaml  service.yaml
docs/: breaking_changes.md  healthchecks.md  monitoring.md  tls_mtls_setup.md
protos/: statsig_forward_proxy.proto
scripts/: server.py
src/: client.rs  server.rs
src/datastore/: config_spec_store.rs  get_id_list_store.rs  id_list_store.rs  log_event_store.rs  mod.rs  sdk_key_store.rs  shared_dict_config_spec_store.rs
src/datastore/caching/: disabled_cache.rs  in_memory_cache.rs  mod.rs  redis_cache.rs
src/datastore/data_providers/: background_data_provider.rs  http_data_provider.rs  mod.rs  request_builder.rs
src/datatypes/: gzip_data.rs  log_event.rs  mod.rs
src/loggers/: datadog_logger.rs  debug_logger.rs  mod.rs  nginx_cache_monitor.rs  stats_logger.rs  statsd_logger.rs
src/observers/: http_data_provider_observer.rs  mod.rs  new_dcs_observer.rs  proxy_event_observer.rs
src/servers/: authorized_request_context.rs  grpc_server.rs  http_server.rs  mod.rs  normalized_path.rs  streaming_channel.rs
src/servers/http_apis/: healthchecks.rs  mod.rs
src/utils/: compress_encoder.rs  deserialization_helpers.rs  mod.rs  rate_limiter.rs  request_helper.rs  statsig_sdk_wrapper.rs
x509_test_certs/: gen_certs.sh
x509_test_certs/root/certs/: root_ca.crt  root_ca.srl
x509_test_certs/root/private/: root_ca.key
