[package]
name = "statsig-forward-proxy"
version = "1.1.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
tonic = "0.11.0"
protobuf = "3.3.0"
prost = "0.12.3"
rocket = { version = "0.5.0", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.12.0", features = ["gzip"] }
futures = "0.3.30"
envy = "0.4.2"
serde = { version = "1.0.130", features = ["derive"] }
redis = { version = "0.25.1", features = ["tokio-rustls-comp", "tokio-comp"] }
bb8 = { version = "0.8.1" }
bb8-redis = { version = "0.15.0" }
async-trait = "0.1.77"
sha2 = "0.10"
lazy_static = "1.4.0"
dogstatsd = "0.11.1"
lru = "0.12.3"
cached = { version = "0.51.3", features = ["proc_macro", "async", "async_tokio_rt_multi_thread"] }
tokio-stream = "0.1.15"
cloud_profiler_rust = "1.1.1"
statsig = "0.3.0"
uuid = { version="1.8.0", features = ["v4", "fast-rng"] }
chrono = "0.4.38"
serde_with = "3.9.0"
libflate = "2.1.0"
serde_json = "1.0.120"
once_cell = "1.19.0"
parking_lot = "0.12.3"
dashmap = "6.1.0"


[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
