[package]
name = "statsig-forward-proxy"
version = "3.0.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
clap = { version = "4.5.17", features = ["derive"] }
tonic = { version = "0.12.3", features = ["tls"] }
protobuf = "3.5.1"
prost = "0.13.2"
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.8" }
futures = "0.3.30"
envy = "0.4.2"
serde = { version = "1.0.210", features = ["derive"] }
redis = { version = "0.25.1", features = ["tokio-rustls-comp", "tokio-comp"] }
bb8 = { version = "0.8.1" }
bb8-redis = { version = "0.15.0" }
async-trait = "0.1.82"
sha2 = "0.10.8"
lazy_static = "1.5.0"
dogstatsd = "0.11.1"
lru = "0.12.4"
cached = { version = "0.53.1", features = ["proc_macro", "async", "async_tokio_rt_multi_thread"] }
tokio-stream = "0.1.16"
cloud_profiler_rust = "1.2.2"
statsig = "1.2.0"
uuid = { version="1.10.0", features = ["v4", "fast-rng"] }
chrono = "0.4.38"
serde_with = "3.9.0"
libflate = "2.1.0"
serde_json = "1.0.128"
once_cell = "1.19.0"
parking_lot = "0.12.3"
dashmap = "6.1.0"
memchr = "2.7.4"
smallvec = "1.13.2"
fxhash = "0.2.1"
tokio-util = "0.7.12"
bytes = "1.7.2"
flate2 = "1.0.34"


[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
