[package]
name = "statsig-forward-proxy"
version = "3.2.4"
edition = "2021"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
tonic = { version = "0.13.1", features = ["tls-ring"] }
protobuf = "3.7.2"
prost = "0.13.2"
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.46.0", features = ["full"] }
reqwest = { version = "0.12.22", default-features = false, features = ["http3", "rustls-tls"] }
futures = "0.3.31"
envy = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
redis = { version = "0.32.3", features = ["tokio-rustls-comp", "tokio-comp"] }
bb8 = { version = "0.9.0" }
bb8-redis = { version = "0.24.0" }
async-trait = "0.1.88"
sha2 = "0.10.9"
lazy_static = "1.5.0"
dogstatsd = "0.12.1"
lru = "0.16.0"
cached = { version = "0.55.1", features = ["proc_macro", "async", "async_tokio_rt_multi_thread"] }
tokio-stream = "0.1.17"
statsig = "1.4.0"
uuid = { version="1.17.0", features = ["v4", "fast-rng"] }
chrono = "0.4.41"
serde_with = "3.14.0"
libflate = "2.1.0"
serde_json = "1.0.140"
once_cell = "1.21.3"
parking_lot = "0.12.4"
dashmap = "6.1.0"
memchr = "2.7.5"
smallvec = "1.15.1"
fxhash = "0.2.1"
tokio-util = "0.7.15"
bytes = "1.10.1"
flate2 = "1.1.2"
regex = "1.11.1"
arc-swap = "1.7.1"
brotli = "8"
opentelemetry = {version = "0.30.0", features = ["internal-logs"]}
opentelemetry_sdk = {version = "0.30.0", features = ["internal-logs"]}
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "http-proto", "http-json", "internal-logs"] }


[build-dependencies]
tonic-build = "0.13.1"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
